# serve-comparison

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  vercel.json
.github/workflows/: vercel-deploy.yml
app/: __init__.py  config.py  main.py  models.py
app/persistence/: __init__.py  comparison_sqlite_store.py
app/scripts/: invites.py
app/services/: __init__.py  comparison_dashboard.py
app/static/: comparison.css  comparison.js  styles.css
app/templates/: comparison_dashboard.html
data/: comparison_claim_invites.json
tests/: test_comparison_dashboard.py  test_config.py  test_dashboard_page.py  test_invites_script.py  test_packaging.py  test_sqlite_store.py  test_store.py  test_sync_api.py
